# backend

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: database.py  main.py  models.py
app/domain/condition/: condition_crud.py  condition_router.py  condition_schema.py
app/domain/temperature/: temperature_crud.py  temperature_crud_no_db.py  temperature_router.py  temperature_router_no_db.py  temperature_schema.py  temperature_schema_no_db.py
migrations/versions/: 0bbc048faa2e_.py  354ffb16381d_.py  81c92811a49e_.py  85c7f1da3813_.py  b6f1f3696338_.py
tests/: test_main.py
